<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".overActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Top"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintBottom_toTopOf="@id/map"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/head_portrait"
            android:layout_width="94dp"
            android:layout_height="69dp"
            android:contentDescription="@string/people"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/username"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/imageView2"
            app:layout_constraintLeft_toRightOf="@id/head_portrait" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="37dp"
            android:contentDescription="@string/bike"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/head_portrait"
            app:layout_constraintRight_toLeftOf="@id/timeDate"
            app:layout_constraintTop_toTopOf="@id/username"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="86dp" />

        <TextView
            android:id="@+id/timeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="53dp"
            android:layout_height="46dp"
            android:contentDescription="@string/cross"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/cross"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/Top"
        tools:layout_editor_absoluteX="0dp">

    </com.amap.api.maps.MapView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="395dp"
        app:layout_constraintTop_toBottomOf="@id/map">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/leftTop"
            android:layout_width="199dp"
            android:layout_height="123dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/distanceSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginRight="16dp"
                android:text="@string/_0_00"
                android:textSize="30sp"
                app:layout_constraintRight_toLeftOf="@id/imageView8"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/km"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/imageView8" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/flag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.753"
                app:srcCompat="@drawable/ic_launcher_flag" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rightTop"
            android:layout_width="199dp"
            android:layout_height="123dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/average_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginRight="12dp"
                android:text="@string/_speed"
                android:textSize="30sp"
                app:layout_constraintRight_toLeftOf="@id/imageView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_h"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/imageView7" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginRight="52dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.764"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/leftBottom"
            android:layout_width="199dp"
            android:layout_height="123dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/leftTop">


            <TextView
                android:id="@+id/altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginRight="12dp"
                android:text="@string/_00_00"
                android:textSize="30sp"
                app:layout_constraintRight_toLeftOf="@id/imageView9"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/m"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/imageView9" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/mountain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.764"
                app:srcCompat="@drawable/ic_launcher_hill"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rightBottom"
            android:layout_width="199dp"
            android:layout_height="123dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rightTop">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginRight="8dp"
                android:text="@string/_00_00"
                android:textSize="30sp"
                app:layout_constraintRight_toLeftOf="@id/imageView6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:text="@string/time"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/imageView6" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginRight="52dp"
                android:contentDescription="@string/clock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.882"
                app:srcCompat="@drawable/ic_launcher_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>